BUG FIX: Read src from file directly. NMS for overlap

--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@
     width: 250px;
     padding: 10px;
     color:wheat;
-    flex-shrink: 0.1;
+    flex-shrink: 0;
 }
 #psconsole{
     overflow: scroll;
